# cue-dashboard

./: .coveragerc  .gitignore  .gitreview  .testr.conf  README.rst  _70_0_cue_panel_group.py  _70_cue_panel.py  _70_cue_panel_group.py  _70_cuedashboard.py  _71_cue_panel.py  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cuedashboard/: api.py  dashboard.py
cuedashboard/broker/: panel.py  tables.py  tabs.py  urls.py  views.py  workflows.py
cuedashboard/default/: panel.py  tables.py  tabs.py  urls.py  views.py
cuedashboard/messagebroker/: panel.py  tables.py  tabs.py  urls.py  views.py  workflows.py
cuedashboard/queues/: panel.py  tables.py  tabs.py  urls.py  views.py  workflows.py
cuedashboard/templates/broker/: _detail_overview.html  detail.html
cuedashboard/templates/messagebroker/: _detail_overview.html  detail.html
cuedashboard/templates/queues/: _detail_overview.html  _launch_details_help.html  _launch_network.html  _launch_network_help.html  _launch_networks.html  detail.html  index.html  launch.html
cuedashboard/tests/: settings.py  test_fake.py
doc/source/: conf.py
